# branded-id

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
id-sys/: Cargo.toml
id-sys/src/: id_ptr.rs  id_slice.rs
id-sys/src/ext/: i32_ext.rs  u32_ext.rs  usize_ext.rs  vec_ext.rs
id-sys/src/internal/: fmt_marker_name.rs  unqualified_type_name.rs
id-sys/src/soa/: id_field.rs
id-sys/src/tests/ext/: mut_ptr_ext_tests.rs
id-sys/src/tests/macros/: usize_id_tests.rs
no-engine/: Cargo.toml
projects/cross_mem/: Cargo.toml
projects/cross_mem/src/: cross_box_dyn.rs  cross_mem_error.rs  cross_mem_result.rs  cross_ptr.rs  cross_ref.rs  cross_ref_mut.rs  cross_safe.rs  imports.rs  layout_ext.rs  lib.rs  non_empty_bytes.rs  non_zero_usize_ext.rs  power_of_two_usize.rs
projects/extern_mem/: Cargo.toml
projects/extern_mem/src/: exports.rs
projects/id-sys/src/: id_ptr.rs  id_vec.rs  isize_id.rs  mut_id_ptr.rs
projects/id_sys/: Cargo.toml
projects/id_sys/src/: id_array.rs  id_ptr.rs  id_slice.rs  id_vec.rs  mut_id_ptr.rs  usize_id.rs
projects/mem/cross_mem/: Cargo.toml
projects/mem/export_alloc/: Cargo.toml
projects/mem/import_alloc/: Cargo.toml
projects/mem/import_alloc/src/: imported_global_alloc.rs  lib.rs  set_global_allocator.rs
projects/mem/import_alloc/src/imports/: alloc_zeroed.rs  dealloc.rs  mod.rs  realloc.rs
projects/mem/import_alloc/src/imports/import_alloc/: alloc.rs  dealloc.rs  realloc.rs
projects/mem/safe_alloc/: Cargo.toml
projects/no-engine/: Cargo.toml
projects/no-engine/src/: lib.rs
projects/no_engine/: Cargo.toml  README.md
projects/no_engine/no_engine/: Cargo.toml
projects/no_engine/no_engine_impl_bevy/: Cargo.toml
projects/no_engine/no_engine_impl_bevy/src/: bevy_log_sys_ctx.rs  bevy_no_engine_sys_ctx.rs  bevy_window_sys_ctx.rs  extern_impl.rs  lib.rs
projects/no_engine/no_engine_impl_bevy/src/extern_impl/: mod.rs  ptr_to_ctx.rs  ptr_to_ctx_mut.rs
projects/no_engine/no_engine_impl_bevy/src/extern_impl/exports/: log_sys_ctx.rs  mod.rs  run.rs  window_sys_ctx.rs
projects/no_engine/no_engine_impl_bevy/src/extern_impl/mem/: get_extern.rs  get_extern_mut.rs  get_extern_slice.rs  get_extern_slice_mut.rs  get_extern_str.rs  get_extern_str_mut.rs  mod.rs
projects/no_engine/no_engine_impl_extern/: Cargo.toml  README.md
projects/no_engine/src/: lib.rs
projects/no_engine_abstractions/: Cargo.toml  README.md
projects/no_engine_abstractions/src/: lib.rs
projects/no_engine_impl_bevy/: Cargo.toml  README.md
projects/no_engine_impl_bevy/src/: extern_impl.rs  lib.rs
projects/no_engine_impl_extern/: Cargo.toml
projects/no_engine_impl_extern/src/: lib.rs
projects/no_engine_test_game/: Cargo.toml
projects/no_engine_test_game/src/: extern_impl.rs  lib.rs
projects/prototype/memory_borrower_test_module/: Cargo.toml  package.json
projects/prototype/memory_owner_test_module/: Cargo.toml
projects/wasm_extern_mem/: Cargo.toml
projects/wasm_extern_mem/src/: get_extern.rs  get_extern_mut.rs  get_extern_slice_mut.rs  get_extern_str.rs  get_extern_str_mut.rs  lib.rs
src/: i128_id.rs  i16_id.rs  i32_id.rs  i64_id.rs  i8_id.rs  id.rs  id_array.rs  id_conversions.rs  id_ptr.rs  id_slice.rs  id_slice_index.rs  id_vec.rs  isize_id.rs  lib.rs  mut_id_ptr.rs  scalar.rs  u128_id.rs  u16_id.rs  u32_id.rs  u64_id.rs  u8_id.rs  usize_id.rs
src/containers/: id_slice.rs  mod.rs
src/ext/: array_ext.rs  bound_pair_ext.rs  i128_ext.rs  i16_ext.rs  i32_ext.rs  i64_ext.rs  i8_ext.rs  isize_ext.rs  mod.rs  mut_ptr_ext.rs  ptr_ext.rs  range_ext.rs  range_from_ext.rs  range_full_ext.rs  range_inclusive_ext.rs  range_to_ext.rs  range_to_inclusive_ext.rs  slice_ext.rs  u128_ext.rs  u16_ext.rs  u32_ext.rs  u64_ext.rs  u8_ext.rs  usize_ext.rs  vec_ext.rs
src/extends/: c_str_id.rs  i128_id.rs  i16_id.rs  i32_id.rs  i64_id.rs  i8_id.rs  id_array.rs  id_ptr.rs  id_slice.rs  id_vec.rs  isize_id.rs  mod.rs  mut_id_ptr.rs  os_str_id.rs  path_id.rs  str_id.rs  u128_id.rs  u16_id.rs  u32_id.rs  u64_id.rs  u8_id.rs  usize_id.rs
src/internal/: fmt_brand_name.rs  fmt_marker_name.rs  formatter_ext.rs  id_slice_range_index.rs  mod.rs  scalar_id.rs  scalar_id_conversions.rs  sealed.rs  split_type_str.rs  unqualified_type_name.rs
src/internal/macros/: count_exprs.rs  mod.rs
src/macros/: c_str_id.rs  c_string_id.rs  i128_id.rs  i16_id.rs  i32_id.rs  i64_id.rs  i8_id.rs  id_array.rs  id_ptr.rs  id_slice.rs  id_vec.rs  isize_id.rs  mod.rs  mut_id_ptr.rs  mut_id_slice.rs  os_str_id.rs  os_string_id.rs  path_buf_id.rs  path_id.rs  str_id.rs  string_id.rs  u128_id.rs  u16_id.rs  u32_id.rs  u64_id.rs  u8_id.rs  usize_id.rs  uuid_id.rs
src/scalar_ids/: i128_id.rs  i16_id.rs  i32_id.rs  i64_id.rs  i8_id.rs  id_conversions.rs  isize_id.rs  mod.rs  scalar_id_conversions.rs  scalar_id_impl.rs  u128_id.rs  u16_id.rs  u32_id.rs  u64_id.rs  u8_id.rs  usize_id.rs
src/soa/: bit_access_info.rs  id_field.rs  id_field_iter.rs  id_field_iter_mut.rs  id_remap.rs  id_struct.rs  id_struct_iter.rs  id_struct_raw_parts.rs  make_default.rs  mod.rs  u32_id_struct.rs  usize_id_struct.rs  usize_id_struct_iter.rs  usize_id_struct_raw_parts.rs
src/string_ids/: c_str_id.rs  mod.rs  os_str_id.rs  path_id.rs  str_id.rs  string_id_impl.rs
src/tests/: i128_id_tests.rs  i16_id_tests.rs  i32_id_tests.rs  i64_id_tests.rs  id32_tests.rs  id32i_tests.rs  id_array_tests.rs  id_ptr_tests.rs  id_slice_tests.rs  id_vec_tests.rs  isize_id_tests.rs  m_test.rs  macros_tests.rs  mod.rs  mut_id_ptr_tests.rs  u128_id_tests.rs  u16_id_tests.rs  u32_ext_tests.rs  u32_id_tests.rs  usize_id_tests.rs
src/tests/containers/: id_array_tests.rs  id_ptr_tests.rs  id_slice_tests.rs  mod.rs  mut_id_ptr_tests.rs
src/tests/ext/: array_ext_tests.rs  bound_pair_ext_tests.rs  i128_ext_tests.rs  i16_ext_tests.rs  i32_ext_tests.rs  i64_ext_tests.rs  i8_ext_tests.rs  isize_ext_tests.rs  mod.rs  mut_ptr_ext_tests.rs  ptr_ext_tests.rs  range_ext_tests.rs  range_from_ext_tests.rs  range_full_ext_tests.rs  range_inclusive_ext_tests.rs  range_to_ext_tests.rs  (+9 more)
src/uuid_ids/: mod.rs  u128_id.rs  uuid_id.rs
(+133 files in other folders)
