[package]
name = "id_sys"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Provides data structures which can be marked such that they only work with similarly marked integer data types."
repository = "https://github.com/tyleo/id_sys"
readme = "README.md"
keywords = ["id", "newtype", "marker", "type-safety"]
categories = ["data-structures", "rust-patterns"]

[features]
default = ["extends", "soa"]
extends = []
soa = []
