[package]
name = "branded-id"
version = "0.1.4"
edition = "2024"
license-file = "LICENSE"
description = "Provides data structures which can be branded such that they only work with similarly branded integer data types."
repository = "https://github.com/tyleo/branded-id"
readme = "README.md"
keywords = ["id", "newtype", "branded", "type-safety"]
categories = ["data-structures", "rust-patterns"]

[features]
default = ["extends", "soa"]
extends = []
soa = []
uuid = ["dep:uuid"]

[dependencies]
uuid = { version = "1", optional = true }
