[package]
name = "no_engine_test_game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
id_sys = "0.1.0"
no_engine = "0.1.0"
no_engine_impl_extern = { version = "0.1.0", optional = true }

[features]
default = ["extern"]
extern = ["dep:no_engine_impl_extern"]
