[package]
name = "import_alloc"
description = "Imports memory allocation functions for use across module boundaries. In particular, this can be useful for sharing memory between multiple WASM modules."
version = "0.1.0"
edition = "2024"

[dependencies]
safe_alloc = "0.1.0"

[features]
default = ["set_global_allocator", "wasm"]
set_global_allocator = []
wasm = []
