[package]
name = "no_engine_impl_bevy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    # "bevy_asset",
    "bevy_log",
    "bevy_render",
    "bevy_state",
    # "bevy_text",
    "bevy_winit",
    # "png",
] }
id_sys = { version = "0.1.0", features = ["soa"] }
no_engine_abstractions = "0.1.0"
wasm-bindgen = { version = "0.2.105", optional = true }
wasm_extern_mem = { version = "0.1.0", optional = true }

[features]
default = ["wasm"]
extern = []
wasm = ["extern", "dep:wasm-bindgen", "dep:wasm_extern_mem"]
