[package]
name = "no_engine_impl_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    # "bevy_asset",
    "bevy_log",
    "bevy_render",
    "bevy_state",
    # "bevy_text",
    "bevy_winit",
    # "png",
] }
extern_mem = { version = "0.1.0", optional = true }
id_sys = { version = "0.1.0", features = ["soa"] }
no_engine_abstractions = "0.1.0"
wasm-bindgen = { version = "0.2.105", optional = true }

[features]
default = ["wasm"]
extern = ["dep:extern_mem"]
wasm = ["extern", "dep:wasm-bindgen"]
